--- a/User/src/LandStyle.css
+++ b/User/src/LandStyle.css
@@ -14,6 +14,7 @@
 }
 /* nav-bar */
 .navbar {
+    top:0px;
     background-color: rgb(211, 210, 208);
     height: 90px;
     width :100%;
@@ -30,7 +31,10 @@
     height:100%;
     
 }
-
+.linkr {
+    text-decoration:none;
+    color:transparent;
+}
  ul {
     padding-left:45px;
     list-style: none;
@@ -39,7 +43,10 @@
     color: rgb(48, 46, 46);
     font-weight: 600;
 }
-
+li {
+  color: rgb(48, 46, 46);
+  font-style:normal;
+}
 li:hover {
   cursor: pointer;
   color :#6d5500;
