--- a/User/src/aboutUs.css
+++ b/User/src/aboutUs.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin:0;
     padding: 0;
     box-sizing: border-box;
@@ -7,3 +7,148 @@
     height:400px;
     background-color: aqua;
 }
+
+.about-us-container {
+    text-align: center;
+    padding: 100px;
+    background-color: #f0f0f0; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: #333;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #666;
+    max-width: 800px;
+    margin-bottom: 30px;
+}
+
+.image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}*/
+
+
+
+.about-us {
+  background-color:rgb(245, 224, 179);
+    text-align: center;
+    padding: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  
+  .about-us-image {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  
+  .about-us-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .about-us-card {
+    width: 1300px;
+    background-color: #f0f0f000;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: white;
+    border: 2px solid white;
+    text-align: center;
+  }
+  
+  .about-us-card2 img {
+    width: 300px;
+    height: 300px;
+    margin-top: 20px;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+
+
+  .about-us-card h3 {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  
+  .about-us-card p {
+    text-align: center;
+    line-height: 1.5;
+  }
+  .about-us-card img {
+    width: 45px;
+    height: 45px;
+    overflow: hidden;
+    margin-bottom: 20px;
+    padding: 10px;
+    align-items: center;
+    text-align:center;
+  }
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .about-us {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .about-us-image, .about-us-card {
+      width: 100%;
+    }
+  }
+  
+  .about-us-card-goals{
+    padding-top:75px;
+    padding-bottom:75px
+  }
+
+  .about-us-card-who{
+    float: left;
+
+  }
+
+  .about-us-card-who img{
+    float: right;
+
+  }
+
+  .image{
+    height:300px;
+    width:1300px
+  }
+
+  .about-us-card-gl {
+    width: 600px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  
