--- a/User/src/components/PopUpSignIn.css
+++ b/User/src/components/PopUpSignIn.css
@@ -31,7 +31,7 @@
     5px rgba(0, 0, 0, 0.1);
     width: 400px;
     margin: 0 auto;
-    background-color: rgba(212, 182, 12, 0.863);
+    background-color: rgba(245, 244, 237, 0.678);
     row-gap: 10px;
   }
   
@@ -44,7 +44,7 @@
   input[type="password"] {
     background-color: transparent;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #0c0b0b;
     border-radius:   
    3px;
     width: 250px;
@@ -76,15 +76,15 @@
   }
 
   .close {
-    background-color: rgb(177, 0, 0);
+    background-color: rgb(136, 6, 6);
     font-weight: 700;
-    margin-top:20px;;
-    margin-inline:48%;
+    margin-top:20px;
+    margin-inline:42%;
+    
     color: #fff;
-    padding: 10px 20px;
+    padding: 15px 80px;
     border: none;
-    border-radius:   
-   3px;
+    border-radius: 10px;
     cursor: pointer;
   
   }
@@ -96,7 +96,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:rgb(255, 230, 7); /* Adjust opacity as needed */
+    background-color: rgba(245, 243, 235, 0.678); /* Adjust opacity as needed */
     display:   
    flex;
     justify-content: center;
