--- a/User/src/LandStyle.css
+++ b/User/src/LandStyle.css
@@ -153,7 +153,7 @@ li:hover
   right: -250px;
   width: 250px;
   height: 100%;
-  background-color: #333;
+  background-color:black;
   color: white;
   transition: right 0.3s;
   padding: 20px;
@@ -161,6 +161,9 @@ li:hover
 
 .sidebar.open {
   right: 0;
+  background-color:black;
+  height: 100%;
+  width: 250px;
 }
 
 /* Hero-section */
