--- a/User/src/Style/chatbotWidget.css
+++ b/User/src/Style/chatbotWidget.css
@@ -30,14 +30,15 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #fff;
-    width: 300px;
+    width: 400px;
+    height:500px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
     bottom: 10px;
 }
 
 .chatbot-messages {
-    height: 300px;
+    height: 425px;
     overflow-y: scroll;
     padding: 10px;
 }
@@ -59,12 +60,20 @@
 }
 
 .chatbot-input {
+    position: relative;
+    width:100%;
+    height: 75px;
     display: flex;
     border-top: 1px solid #ccc;
     padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .chatbot-input input {
+    position: relative;
+    width:100%;
     flex: 1;
     padding: 10px;
     border: none;
@@ -73,6 +82,7 @@
 }
 
 .chatbot-input button {
+    position: relative;
     background-color: #007bff;
     color: white;
     border: none;
