--- a/User/src/BlogContent.css
+++ b/User/src/BlogContent.css
@@ -3,9 +3,16 @@
     padding: 20px;
     font-family: Arial, sans-serif;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 50px auto;
   }
   
+.blog-content img {
+  margin-bottom: 20px;
+  width:400px;
+  height:300px;
+  
+}
+
   .blog-content-image {
     width: 100%;
     height: 400px;
