--- a/User/src/Style/BlogPage.css
+++ b/User/src/Style/BlogPage.css
@@ -6,16 +6,19 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
+    background-image:url("C:\Users\mariy\OneDrive\Documents\OneStopv1\OneStop\User\src\assets\images\banner-img (2).jpg");
+    background-size: cover;
   }
   
   .blog-card-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 100%;
   }
   
   .blog-card {
-    width: 300px;
+    width: 400px;
     height: 400px;
     margin: 10px;
     background-color: #fff;
@@ -77,16 +80,23 @@
   }
   
   .banner {
-    width: 100%;
-    height: 300px; /* Adjust height as needed */
-    background-image: url('../assets/images/banner-img.jpg');
-    background-size: cover;
+    width: 100% ;
+    height: 600px; /* Adjust height as needed */
     background-position: center;
     color:white;
     text-align: left;
     font-size: 48px;
+    margin-top:20px;
+    margin-bottom: 30px;
   }
   
+  .slider {
+    width: 400px;
+    margin-left:100px;
+  }
+  .slider img {
+    width:90%
+  }
   .blog-card-container {
     flex: 1; /* Take up remaining space */
     padding: 20px;
