--- a/User/src/Style/chatbotWidget.css
+++ b/User/src/Style/chatbotWidget.css
@@ -6,7 +6,8 @@
 }
 
 .chatbot-widget.open .chatbot-toggle {
-    bottom: 10px; /* Adjust this value to ensure button is not hidden */
+    bottom: 20px;
+    background-color: #f5a021; /* Adjust this value to ensure button is not hidden */
 }
 
 .chatbot-toggle {
@@ -34,11 +35,15 @@
     height:500px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     position: relative;
-    bottom: 10px;
+    bottom: 20px;
 }
 
+.chatbot-window form {
+    height:70px;
+
+}
 .chatbot-messages {
-    height: 425px;
+    height: 400px;
     overflow-y: scroll;
     padding: 10px;
 }
@@ -62,11 +67,11 @@
 .chatbot-input {
     position: relative;
     width:100%;
-    height: 75px;
     display: flex;
     border-top: 1px solid #ccc;
     padding: 10px;
     display: flex;
+    bottom: 50px;
     flex-direction: row;
     justify-content: space-around;
 }
@@ -75,6 +80,7 @@
     position: relative;
     width:100%;
     flex: 1;
+    bottom: 0px;
     padding: 10px;
     border: none;
     border-radius: 5px;
