--- a/User/src/components/PopUpSignIn.css
+++ b/User/src/components/PopUpSignIn.css
@@ -21,6 +21,9 @@
     box-shadow: 0px   
    2px 5px rgba(0, 0, 0, 0.3);
   }
+  .popup h1 {
+    margin-bottom: 10px;
+  }
   
   form {
     display: flex;
@@ -60,7 +63,7 @@
   }
   
   button[type="submit"] {
-    background-color: #007bff;
+    background-color: #f5a021;
     color: #fff;
     padding: 10px 50px;
     border: none;
@@ -83,7 +86,7 @@
     background-color: rgb(136, 6, 6);
     font-weight: 700;
     margin-top:20px;
-    margin-inline:42%;
+    margin-inline:45%;
     
     color: #fff;
     padding: 15px 80px;
@@ -100,31 +103,50 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:rgb(253, 222, 121); /* Adjust opacity as needed */
+
     display:   
    flex;
     justify-content: center;
     align-items: center;
     z-index: 999;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('C:/Users/mariy/OneDrive/Documents/OneStopv1/OneStop/User/public/sign-up-bg.jpg');
+    background-size:cover;
+  }
+
+  .Sign-up h1 {
+    text-align: center;
+    
+    color:rgb(46, 46, 46);
   }
 
 form {
-height:500px;
-width:500px;
+height:auto;
+width:600px;
 display: flex;
-flex-direction: column;
 align-items: center;
-background-color:rgb(250, 250, 193);
+background-color:rgb(248, 215, 125);
 border-radius: 8px;
+box-shadow:3px 3px 20px rgba(131, 131, 98, 0.781);
+margin-top: 80px;
+margin-bottom: 40px;
 }
-.Sign-up h1 {
-color:white;
-}
+
 label {
   font-size:20px;
+  
+}
+.create-pass{
+  display: flex;
+  justify-content: center;
 }
 input[type='text'],
   input[type="email"],
   input[type="password"] {
-    width:300px;
+    width:400px;
+    border-radius: 4px;
+    border-color: rgb(63, 31, 2);
+  }
+
+  .pass-cond {
+    margin-top:10px;
   }
